# -UnifiedFPN

./: CMakeLists.txt  LICENSE  README.md  optimization_report.md
benchmarks/: fpn_benchmark.cu  upsample_benchmark.cu
include/: fpn_kernels.h  fpn_types.h
include/unified_fpn/core/: types.h
lib/kernels/compute/: fpn_compute_kernels.cu  fpn_optimized_kernels.cu  lateral_conv_kernels.cu  tensor_cores.cu
lib/kernels/fusion/: fused_fpn_kernels.cu
lib/kernels/memory/: bilinear_upsample_kernels.cu  fast_upsample_kernels.cu  upsample_host_interface.cpp  upsample_kernels.cu  upsample_specializations.cu
lib/utils/: auto_tuner.cu
python/: __init__.py  fpn_pytorch.cpp  setup.py
src/core/: fpn_core.cu
src/kernels/: tensor_core_kernels.cu
src/kernels/backward/: lateral_conv_backward.cu
src/kernels/training/: gradient_clipping.cu  gradient_scaling.cu
src/training/backward/: upsample_backward.cu
tests/: test_fpn_kernels.cu
